dbux-graph-client/src/styles.css
@import url("https://fonts.googleapis.com/css?family=Source+Code+Pro&display=swap");
/* *{
  margin: 0;
  padding: 0;
}
.graph{
  height:100%;
  width:100%;
}
canvas{
  display:block;
} */

/** ###########################################################################
 * global setup
 * ############################################################################ */

html,body{
  width: 100%;
  height: 100%;
  font-size: 12px; /* NOTE: courier is a rather "big" font, making smaller font size seem bigger */
  font-family: "Lucida Console", Courier, monospace;
  padding: 0 !important;
  margin: 0 !important;
  overflow: hidden;
}

/** ###########################################################################
 * graph nodes
 * ############################################################################ */

.graph-node .content button {
  background-color: rgba(0,0,0,0.1);
  display:inline-block;
  margin:0;
  padding: 0;
  border: 0;
  line-height: 1rem;
  min-width: 1.4rem; /* NOTE: on some systems, some of those emojis are extra-wide */
}

.selected-trace {
  color: darkred;
  border: 1px solid darkred;
  margin: -1px;
}

.context-node .node-children{
  border: 1px solid rgba(0, 0, 0, 0.1);
}

.indicator-cont{
  position:relative;
  width:0;
  height:auto;
}
.set-top .indicator{
  position: absolute;
  border-top: 1px solid rgb(139, 0, 0);
  width: 1em;
  left:-1.1em;
  top:0;
}
.set-calltrace .indicator::before{
  content:"●";
  position: absolute;
  color: rgb(139, 0, 0);
  /* border-top: 1px solid black;
  width: 1em; */
  left:-0.85em;
  top:0;
}
.set-bottom .indicator{
  position: absolute;
  border-top: 1px solid rgb(139, 0, 0);
  width: 1em;
  left:-1.1em;
  bottom:0;
}

/* 
.trace{
  display:flex;
  justify-content:flex-start;
  height:auto;
  width:auto;
  margin:5px;
  border: 1px solid black;
  white-space: nowrap;
} */

.graph-root {
  /* offset fixed toolbar height */
  margin-top: 30px;

  padding-left: 2px;
}

.graph-cont {
  /* width: 200px;
  height: 200px; */
  width: 100vw;
  /* height: 100vh; */
  height: calc(100vh - 30px);
  overflow: auto;
}

.graph-cont > .body {
  width: fit-content;
  height: fit-content;
  transform-origin: 0 0;
  /* this way, the viewport will (usually) not move when working on nodes near the bottom of the graph */
  margin-bottom: calc(100vh - 20px);
  /* overflow: auto; */
}

.context-node {
  white-space: nowrap;
  border-right: 0;
}

.title{
  width: 100%;
}

.node-left-padding {
  width: 1em;
  position: relative;
}

.thin-mode .node-left-padding {
  width: 0.4em;
  position: relative;
}

/** ###########################################################################
 * RunNode
 * ############################################################################ */

.run-node {
  padding: 10px;
}
.run-node > div {
  border: 1px solid black;
}
.hidden-run-node > div {
  background-color: rgba(206, 206, 206, 0.815);
}

@keyframes new-run-node {
  from {
    padding: 1px;
  }
  to {
    padding: 10px;
  }
}
@keyframes new-run-node-content {
  from {
    border: 10px solid yellow;
  }
  to {
    border: 1px solid orange;
  }
}
.run-node.new {
  animation: new-run-node 10s linear;
  animation-fill-mode: forwards;
}
.run-node.new > div {
  animation: new-run-node-content 10s linear;
  animation-fill-mode: forwards;
}


/** ###########################################################################
 * graph decorations
 * ############################################################################ */

.highlight-btn {
  margin-right: 0.3rem !important;
}

.node-toggle-btn {
  margin-right: 0.3rem !important;
}


.loc-label {
  color: #333;
  margin-right: 0.3rem !important;
}

.hide-locs .loc-label {
  display: none !important;
}

[data-call-mode="1"] [data-el="contextLabel"] {
  /* display: none !important; */
}
[data-call-mode="0"] [data-el="parentLabel"] {
  display: none !important;
}

[data-call-mode="1"] [data-el="locLabel"] {
  display: none !important;
}
[data-call-mode="0"] [data-el="parentLocLabel"] {
  display: none !important;
}

[data-el="parentLabel"] {
  color: #222;
  background: rgba(0,0,0,0.05);
  font-size: 11px;
  margin-right: 0.3rem !important;
}

.value-label {
  color: #222;
  background: rgba(0,0,0,0.1);
  font-size: 11px;
  margin-right: 0.3rem !important;
}
.hide-values .value-label {
  display: none !important;
}

/* ContextNode link style */

.dbux-link {
  /* color: rgb(71, 52, 243); */
  /* color: black; */
  cursor: pointer;
}

.dbux-link:hover {
  /* color: rgb(104, 91, 218); */
  text-decoration: underline;
} 

/** ###########################################################################
 * general purpose highlight animation
 * ############################################################################ */


/*focus flash*/
.flash-me {
  -webkit-animation: flash linear 1.7s infinite;
  animation: flash linear 1.7s infinite;
}

@-webkit-keyframes flash {
  0%   { background:#fff; } 
  20%  { opacity: 1; background:none; } 
  40%  { background:#fff; } 
  60%  { opacity: 1; background:none; }	
  80%  { background:#fff;} 
  100% { opacity: 1; background:none; }
}
@keyframes flash {
  0%   { background:#fff; } 
  100% { opacity: 1; background:none; }
}


/** ###########################################################################
 * minimap
 * ############################################################################ */

#minimap{
  position: fixed;
  display:block;
  right: 10px;
  top: 60px;
  border: 2px solid black;
  background:black;
}


/** ###########################################################################
 * misc + general-purpose
 * ############################################################################ */

.hidden {
  display: none !important;
}

.flex-row {
  display: flex;
  flex-direction: row;
}

.flex-column {
  display: flex;
  flex-direction: column;
}

.align-center {
  display: flex;
  justify-content: center;
  align-items: center;
}

.vertical-align-center {
  display: flex;
  align-items: center;
}

.horizontal-align-center {
  display: flex;
  justify-content: center;
}

.full-width {
  width: 100%;
}

.width-fit {
  width: fit-content;
}

.no-padding {
  padding: 0 !important;
}

.no-horizontal-padding {
  padding-left: 0;
  padding-right: 0;
}

.ellipsis-20 {
  white-space: nowrap;
  overflow-x: hidden;
  text-overflow: ellipsis;
  max-width: 20rem;
}

.cursor-pointer {
  cursor: pointer;
}

/** ###########################################################################
 * hackfix for emojis
 * ############################################################################ */

 /**
  * Emojis don't display centered on Retina screens...
  *
  * @see https://stackoverflow.com/questions/44142464/how-do-i-horizontally-center-an-emoji
  * @see https://codepen.io/faessler/pen/aRNOEY
  */
.emoji span {
  display: inline-block;
  font-size: 4em;
  transform: scale(.25) translateY(1.1em);
  margin: -1em -.333em;
}


/** ###########################################################################
 * colors
 * ############################################################################ */

.darkgray {
  color: #555;
}

.red {
  color: red;
}

.darkred {
  color: darkred;
}

/** ###########################################################################
 * highlighter
 * ############################################################################ */

.highlighter{

}
.highlight-on {
  background: #888 !important;
}
.highlight-on .graph-node:not(.highlight) > * {
  background: #888 !important;
}
.highlight-on .graph-node .children {
  background: #888 !important;
}

/** ###########################################################################
 * tooltips
 * ############################################################################ */
 

#tooltip {
  background: #333;
  color: white;
  font-weight: bold;
  padding: 4px 8px;
  font-size: 11px;
  border-radius: 4px;
}
#arrow,
#arrow::before {
position: absolute;
width: 8px;
height: 8px;
z-index: -1;
}

#arrow::before {
content: '';
transform: rotate(45deg);
background: #333;
}
#tooltip[data-popper-placement^='bottom'] > #arrow {
  top: -4px;
}
#tooltip {
/* ... */
  display: none;
}

#tooltip[data-show] {
  display: block;
}


/** ###########################################################################
 * zoombar
 * ############################################################################ */

#zoombar {
  position:fixed;
  bottom:10px;
  right:10px;
}

#zoombar .button {
  margin:2.5px;
}

